--- a/Documentation/html/search/all_63.html
+++ b/Documentation/html/search/all_63.html
@@ -7,30 +7,36 @@
 <body class="SRPage">
 <div id="SRIndex">
 <div class="SRStatus" id="Loading">Loading...</div>
+<div class="SRResult" id="SR_clusterbygrouptag">
+ <div class="SREntry">
+  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../interface_o_c_map_view.html#ad9a83feeb0ec3a7c05943fad09abee5d" target="_parent">clusterByGroupTag</a>
+  <span class="SRScope">OCMapView</span>
+ </div>
+</div>
 <div class="SRResult" id="SR_clusteringenabled">
  <div class="SREntry">
-  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../interface_o_c_map_view.html#ab85cea6cbf085f01c01041534d890bf2" target="_parent">clusteringEnabled</a>
+  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../interface_o_c_map_view.html#a18dcc38d00becc477d6a19cd5724960e" target="_parent">clusteringEnabled</a>
   <span class="SRScope">OCMapView</span>
  </div>
 </div>
 <div class="SRResult" id="SR_clusteringmethod">
  <div class="SREntry">
-  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../interface_o_c_map_view.html#a71cca9db26878dc1eaec14c8284ad3e5" target="_parent">clusteringMethod</a>
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../interface_o_c_map_view.html#a9a3446cb72c4b4b4f4e2b6a44948e4b6" target="_parent">clusteringMethod</a>
   <span class="SRScope">OCMapView</span>
  </div>
 </div>
 <div class="SRResult" id="SR_clustersize">
  <div class="SREntry">
-  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../interface_o_c_map_view.html#a334db0e1ea9543611ed1018336be8bdf" target="_parent">clusterSize</a>
+  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../interface_o_c_map_view.html#a2e2bc53230717c10b535623bfefa5971" target="_parent">clusterSize</a>
   <span class="SRScope">OCMapView</span>
  </div>
 </div>
 <div class="SRResult" id="SR_coordinate">
  <div class="SREntry">
-  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_coordinate')">coordinate</a>
+  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_coordinate')">coordinate</a>
   <div class="SRChildren">
-    <a id="Item3_c0" onkeydown="return searchResults.NavChild(event,3,0)" onkeypress="return searchResults.NavChild(event,3,0)" onkeyup="return searchResults.NavChild(event,3,0)" class="SRScope" href="../interface_o_c_annotation.html#a06da4420d4fe081b9775fd4f0961cda4" target="_parent">OCAnnotation::coordinate()</a>
-    <a id="Item3_c1" onkeydown="return searchResults.NavChild(event,3,1)" onkeypress="return searchResults.NavChild(event,3,1)" onkeyup="return searchResults.NavChild(event,3,1)" class="SRScope" href="../interface_o_c_annotation.html#a77a4843fde8e33c7acc73957d66010d0" target="_parent">OCAnnotation::coordinate()</a>
+    <a id="Item4_c0" onkeydown="return searchResults.NavChild(event,4,0)" onkeypress="return searchResults.NavChild(event,4,0)" onkeyup="return searchResults.NavChild(event,4,0)" class="SRScope" href="../interface_o_c_annotation.html#aa284dfc828e69ed8a933afa71bcd119d" target="_parent">OCAnnotation::coordinate()</a>
+    <a id="Item4_c1" onkeydown="return searchResults.NavChild(event,4,1)" onkeypress="return searchResults.NavChild(event,4,1)" onkeyup="return searchResults.NavChild(event,4,1)" class="SRScope" href="../interface_o_c_annotation.html#a377c9caa829a929c4e50424510dc1a9a" target="_parent">OCAnnotation::coordinate()</a>
   </div>
  </div>
 </div>
