--- a/Documentation/html/search/all_6f.html
+++ b/Documentation/html/search/all_6f.html
@@ -70,19 +70,29 @@
   <a id="Item11" onkeydown="return searchResults.Nav(event,11)" onkeypress="return searchResults.Nav(event,11)" onkeyup="return searchResults.Nav(event,11)" class="SRSymbol" href="../_o_c_distance_8m.html" target="_parent">OCDistance.m</a>
  </div>
 </div>
+<div class="SRResult" id="SR_ocgrouping_2dp">
+ <div class="SREntry">
+  <a id="Item12" onkeydown="return searchResults.Nav(event,12)" onkeypress="return searchResults.Nav(event,12)" onkeyup="return searchResults.Nav(event,12)" class="SRSymbol" href="../protocol_o_c_grouping-p.html" target="_parent">OCGrouping-p</a>
+ </div>
+</div>
+<div class="SRResult" id="SR_ocgrouping_2eh">
+ <div class="SREntry">
+  <a id="Item13" onkeydown="return searchResults.Nav(event,13)" onkeypress="return searchResults.Nav(event,13)" onkeyup="return searchResults.Nav(event,13)" class="SRSymbol" href="../_o_c_grouping_8h.html" target="_parent">OCGrouping.h</a>
+ </div>
+</div>
 <div class="SRResult" id="SR_ocmapview">
  <div class="SREntry">
-  <a id="Item12" onkeydown="return searchResults.Nav(event,12)" onkeypress="return searchResults.Nav(event,12)" onkeyup="return searchResults.Nav(event,12)" class="SRSymbol" href="../interface_o_c_map_view.html" target="_parent">OCMapView</a>
+  <a id="Item14" onkeydown="return searchResults.Nav(event,14)" onkeypress="return searchResults.Nav(event,14)" onkeyup="return searchResults.Nav(event,14)" class="SRSymbol" href="../interface_o_c_map_view.html" target="_parent">OCMapView</a>
  </div>
 </div>
 <div class="SRResult" id="SR_ocmapview_2eh">
  <div class="SREntry">
-  <a id="Item13" onkeydown="return searchResults.Nav(event,13)" onkeypress="return searchResults.Nav(event,13)" onkeyup="return searchResults.Nav(event,13)" class="SRSymbol" href="../_o_c_map_view_8h.html" target="_parent">OCMapView.h</a>
+  <a id="Item15" onkeydown="return searchResults.Nav(event,15)" onkeypress="return searchResults.Nav(event,15)" onkeyup="return searchResults.Nav(event,15)" class="SRSymbol" href="../_o_c_map_view_8h.html" target="_parent">OCMapView.h</a>
  </div>
 </div>
 <div class="SRResult" id="SR_ocmapview_2em">
  <div class="SREntry">
-  <a id="Item14" onkeydown="return searchResults.Nav(event,14)" onkeypress="return searchResults.Nav(event,14)" onkeyup="return searchResults.Nav(event,14)" class="SRSymbol" href="../_o_c_map_view_8m.html" target="_parent">OCMapView.m</a>
+  <a id="Item16" onkeydown="return searchResults.Nav(event,16)" onkeypress="return searchResults.Nav(event,16)" onkeyup="return searchResults.Nav(event,16)" class="SRSymbol" href="../_o_c_map_view_8m.html" target="_parent">OCMapView.m</a>
  </div>
 </div>
 <div class="SRStatus" id="Searching">Searching...</div>
