--- a/Documentation/html/search/all_73.html
+++ b/Documentation/html/search/all_73.html
@@ -11,33 +11,39 @@
  <div class="SREntry">
   <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_subtitle')">subtitle</a>
   <div class="SRChildren">
-    <a id="Item0_c0" onkeydown="return searchResults.NavChild(event,0,0)" onkeypress="return searchResults.NavChild(event,0,0)" onkeyup="return searchResults.NavChild(event,0,0)" class="SRScope" href="../interface_o_c_annotation.html#a82e06ae9bd5fbdcb9019a73eb9027864" target="_parent">OCAnnotation::subtitle()</a>
-    <a id="Item0_c1" onkeydown="return searchResults.NavChild(event,0,1)" onkeypress="return searchResults.NavChild(event,0,1)" onkeyup="return searchResults.NavChild(event,0,1)" class="SRScope" href="../interface_o_c_annotation.html#ae33485fa8be0fa811c5463b66d95e776" target="_parent">OCAnnotation::subtitle()</a>
+    <a id="Item0_c0" onkeydown="return searchResults.NavChild(event,0,0)" onkeypress="return searchResults.NavChild(event,0,0)" onkeyup="return searchResults.NavChild(event,0,0)" class="SRScope" href="../interface_o_c_annotation.html#a917db584ad932e6663677b38b5887bd8" target="_parent">OCAnnotation::subtitle()</a>
+    <a id="Item0_c1" onkeydown="return searchResults.NavChild(event,0,1)" onkeypress="return searchResults.NavChild(event,0,1)" onkeyup="return searchResults.NavChild(event,0,1)" class="SRScope" href="../interface_o_c_annotation.html#af6f703c067b8d6c8725c94a4977ecf50" target="_parent">OCAnnotation::subtitle()</a>
   </div>
  </div>
 </div>
 <div class="SRResult" id="SR_">
  <div class="SREntry">
-  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../interface_o_c_annotation.html#a6b57763947990587254c4e3322b6ecb7" target="_parent"></a>
+  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../interface_o_c_annotation.html#a0129e7c0120a543b9a68a3058646ae09" target="_parent"></a>
   <span class="SRScope">OCAnnotation</span>
  </div>
 </div>
 <div class="SRResult" id="SR_">
  <div class="SREntry">
-  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../interface_o_c_annotation.html#a7a440b67aff9d27d2de227eae594d42a" target="_parent"></a>
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../interface_o_c_annotation.html#abb57e105050062adad3b1112f2b46feb" target="_parent"></a>
   <span class="SRScope">OCAnnotation</span>
  </div>
 </div>
 <div class="SRResult" id="SR_">
  <div class="SREntry">
-  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../interface_o_c_annotation.html#a19e5f07dd4f6e49a5f904ef1b5f41aa9" target="_parent"></a>
+  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../interface_o_c_annotation.html#acacc0fcf8870abd79523394504b89e2f" target="_parent"></a>
   <span class="SRScope">OCAnnotation</span>
  </div>
 </div>
 <div class="SRResult" id="SR_">
  <div class="SREntry">
-  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../interface_o_c_map_view.html#ad3a04456c2b1050bcff83de1a6998a01" target="_parent"></a>
+  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../interface_o_c_map_view.html#a9e1c528abf0c86d0d4894acc67c0fd2f" target="_parent"></a>
   <span class="SRScope">OCMapView</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_">
+ <div class="SREntry">
+  <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../interface_o_c_annotation.html#a72b5f43455b16055b2d52c0e2c4be854" target="_parent"></a>
+  <span class="SRScope">OCAnnotation</span>
  </div>
 </div>
 <div class="SRStatus" id="Searching">Searching...</div>
