--- a/Documentation/html/search/classes_6f.html
+++ b/Documentation/html/search/classes_6f.html
@@ -22,9 +22,14 @@
   <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../interface_o_c_annotation.html" target="_parent">OCAnnotation</a>
  </div>
 </div>
+<div class="SRResult" id="SR_ocgrouping_2dp">
+ <div class="SREntry">
+  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../protocol_o_c_grouping-p.html" target="_parent">OCGrouping-p</a>
+ </div>
+</div>
 <div class="SRResult" id="SR_ocmapview">
  <div class="SREntry">
-  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../interface_o_c_map_view.html" target="_parent">OCMapView</a>
+  <a id="Item4" onkeydown="return searchResults.Nav(event,4)" onkeypress="return searchResults.Nav(event,4)" onkeyup="return searchResults.Nav(event,4)" class="SRSymbol" href="../interface_o_c_map_view.html" target="_parent">OCMapView</a>
  </div>
 </div>
 <div class="SRStatus" id="Searching">Searching...</div>
