--- a/Documentation/html/_o_c_grouping_8h_source.html
+++ b/Documentation/html/_o_c_grouping_8h_source.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/xhtml;charset=UTF-8"/>
-<title>OCMapView: /Users/Boti/Documents/coding/iPhone Development/OCMapView+Sample/OCMapView/OCDistance.m Source File</title>
+<title>OCMapView: /Users/Boti/Documents/coding/iPhone Development/OCMapView+Sample/OCMapView/OCGrouping.h Source File</title>
 <link href="tabs.css" rel="stylesheet" type="text/css"/>
 <link href="search/search.css" rel="stylesheet" type="text/css"/>
 <script type="text/javascript" src="search/search.js"></script>
@@ -58,53 +58,23 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
   </div>
 <div class="header">
   <div class="headertitle">
-<div class="title">/Users/Boti/Documents/coding/iPhone Development/OCMapView+Sample/OCMapView/OCDistance.m</div>  </div>
+<div class="title">/Users/Boti/Documents/coding/iPhone Development/OCMapView+Sample/OCMapView/OCGrouping.h</div>  </div>
 </div>
 <div class="contents">
-<a href="_o_c_distance_8m.html">Go to the documentation of this file.</a><div class="fragment"><pre class="fragment"><a name="l00001"></a>00001 <span class="comment">//</span>
-<a name="l00002"></a>00002 <span class="comment">//  OEDistance.h</span>
-<a name="l00003"></a>00003 <span class="comment">//  openClusterMapView</span>
+<a href="_o_c_grouping_8h.html">Go to the documentation of this file.</a><div class="fragment"><pre class="fragment"><a name="l00001"></a>00001 <span class="comment">//</span>
+<a name="l00002"></a>00002 <span class="comment">//  OCGrouping.h</span>
+<a name="l00003"></a>00003 <span class="comment">//  OClusterMapView+Sample</span>
 <a name="l00004"></a>00004 <span class="comment">//</span>
-<a name="l00005"></a>00005 <span class="comment">//  Created by Botond Kis on 14.02.11.</span>
-<a name="l00006"></a>00006 <span class="comment">//</span>
-<a name="l00007"></a>00007 
-<a name="l00008"></a>00008 <span class="preprocessor">#import &quot;<a class="code" href="_o_c_distance_8h.html">OCDistance.h</a>&quot;</span>
-<a name="l00009"></a>00009 
-<a name="l00010"></a>00010 <span class="comment">//</span>
-<a name="l00011"></a>00011 <span class="comment">// calculates the distance</span>
-<a name="l00012"></a>00012 <span class="comment">// between two given coordinates</span>
-<a name="l00013"></a><a class="code" href="_o_c_distance_8m.html#a66b4687328c3918c4b918a196bd77ec6">00013</a> CLLocationDistance <a class="code" href="_o_c_distance_8h.html#a66b4687328c3918c4b918a196bd77ec6" title="calculates the distance between two given coordinates.">getDistance</a>(CLLocationCoordinate2D firstLocation, CLLocationCoordinate2D secondLocation){
-<a name="l00014"></a>00014     <span class="comment">// Calculate differences of the to annotations</span>
-<a name="l00015"></a>00015     CLLocationDistance distance;
-<a name="l00016"></a>00016     
-<a name="l00017"></a>00017     CLLocationDistance deltaLat = firstLocation.latitude - secondLocation.latitude;
-<a name="l00018"></a>00018     CLLocationDistance deltaLon = firstLocation.longitude - secondLocation.longitude;
-<a name="l00019"></a>00019     distance = sqrt(deltaLat*deltaLat + deltaLon*deltaLon);
-<a name="l00020"></a>00020     
-<a name="l00021"></a>00021     <span class="keywordflow">return</span> distance;
-<a name="l00022"></a>00022 }
-<a name="l00023"></a>00023 
-<a name="l00024"></a>00024 
-<a name="l00025"></a>00025 <span class="comment">//</span>
-<a name="l00026"></a>00026 <span class="comment">// This c function returns true if the distance</span>
-<a name="l00027"></a>00027 <span class="comment">// between two given locations is shorter</span>
-<a name="l00028"></a>00028 <span class="comment">// or equal than the designated distance.</span>
-<a name="l00029"></a>00029 <span class="comment">// The distance represents the cluster size.</span>
-<a name="l00030"></a><a class="code" href="_o_c_distance_8m.html#a0074f5b53fa6506ab07fba907a5cdded">00030</a> BOOL <a class="code" href="_o_c_distance_8h.html#a0074f5b53fa6506ab07fba907a5cdded" title="determines either two locations are near or not. Returns true if the distance between two give locati...">isLocationNearToOtherLocation</a>(CLLocationCoordinate2D firstLocation, CLLocationCoordinate2D secondLocation, CLLocationDistance distanceInGeoCoordinates){
-<a name="l00031"></a>00031         <span class="comment">// Return value</span>
-<a name="l00032"></a>00032         BOOL retVal = YES;
-<a name="l00033"></a>00033         
-<a name="l00034"></a>00034         <span class="comment">// get distance</span>
-<a name="l00035"></a>00035         CLLocationDistance distance = <a class="code" href="_o_c_distance_8h.html#a66b4687328c3918c4b918a196bd77ec6" title="calculates the distance between two given coordinates.">getDistance</a>(firstLocation, secondLocation);
-<a name="l00036"></a>00036 
-<a name="l00037"></a>00037         <span class="comment">// If the distance between these two things is longer than the</span>
-<a name="l00038"></a>00038         <span class="comment">// requested distanceInGeoCoordinates, the two annotations are not near to each other.</span>
-<a name="l00039"></a>00039         <span class="keywordflow">if</span> (distance &gt; distanceInGeoCoordinates) {
-<a name="l00040"></a>00040                 retVal = NO;
-<a name="l00041"></a>00041         }
-<a name="l00042"></a>00042         
-<a name="l00043"></a>00043         <span class="keywordflow">return</span> retVal;
-<a name="l00044"></a>00044 }
+<a name="l00005"></a>00005 <span class="comment">//  Created by Botond Kis on 13.02.12.</span>
+<a name="l00006"></a>00006 <span class="comment">//  Copyright (c) 2012 __MyCompanyName__. All rights reserved.</span>
+<a name="l00007"></a>00007 <span class="comment">//</span>
+<a name="l00008"></a>00008 
+<a name="l00009"></a>00009 <span class="preprocessor">#import &lt;Foundation/Foundation.h&gt;</span>
+<a name="l00010"></a>00010 
+<a name="l00012"></a>00012 
+<a name="l00013"></a><a class="code" href="protocol_o_c_grouping-p.html">00013</a> <span class="keyword">@protocol </span><a class="code" href="protocol_o_c_grouping-p.html" title="Protocol which is needed to use different groups of clusters.">OCGrouping</a> &lt;NSObject&gt;
+<a name="l00014"></a>00014 -(NSString *) <a class="code" href="protocol_o_c_grouping-p.html#a57678709759abcc7d87b12e77db94c8c">groupTag</a>;
+<a name="l00015"></a>00015 <span class="keyword">@end</span>
 </pre></div></div>
 </div>
 <!-- window showing the filter options -->
