--- a/Documentation/html/search/files_6f.html
+++ b/Documentation/html/search/files_6f.html
@@ -37,14 +37,19 @@
   <a id="Item5" onkeydown="return searchResults.Nav(event,5)" onkeypress="return searchResults.Nav(event,5)" onkeyup="return searchResults.Nav(event,5)" class="SRSymbol" href="../_o_c_distance_8m.html" target="_parent">OCDistance.m</a>
  </div>
 </div>
+<div class="SRResult" id="SR_ocgrouping_2eh">
+ <div class="SREntry">
+  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../_o_c_grouping_8h.html" target="_parent">OCGrouping.h</a>
+ </div>
+</div>
 <div class="SRResult" id="SR_ocmapview_2eh">
  <div class="SREntry">
-  <a id="Item6" onkeydown="return searchResults.Nav(event,6)" onkeypress="return searchResults.Nav(event,6)" onkeyup="return searchResults.Nav(event,6)" class="SRSymbol" href="../_o_c_map_view_8h.html" target="_parent">OCMapView.h</a>
+  <a id="Item7" onkeydown="return searchResults.Nav(event,7)" onkeypress="return searchResults.Nav(event,7)" onkeyup="return searchResults.Nav(event,7)" class="SRSymbol" href="../_o_c_map_view_8h.html" target="_parent">OCMapView.h</a>
  </div>
 </div>
 <div class="SRResult" id="SR_ocmapview_2em">
  <div class="SREntry">
-  <a id="Item7" onkeydown="return searchResults.Nav(event,7)" onkeypress="return searchResults.Nav(event,7)" onkeyup="return searchResults.Nav(event,7)" class="SRSymbol" href="../_o_c_map_view_8m.html" target="_parent">OCMapView.m</a>
+  <a id="Item8" onkeydown="return searchResults.Nav(event,8)" onkeypress="return searchResults.Nav(event,8)" onkeyup="return searchResults.Nav(event,8)" class="SRSymbol" href="../_o_c_map_view_8m.html" target="_parent">OCMapView.m</a>
  </div>
 </div>
 <div class="SRStatus" id="Searching">Searching...</div>
