--- a/Documentation/html/search/functions_67.html
+++ b/Documentation/html/search/functions_67.html
@@ -16,9 +16,18 @@
   </div>
  </div>
 </div>
+<div class="SRResult" id="SR_grouptag">
+ <div class="SREntry">
+  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_grouptag')">groupTag</a>
+  <div class="SRChildren">
+    <a id="Item1_c0" onkeydown="return searchResults.NavChild(event,1,0)" onkeypress="return searchResults.NavChild(event,1,0)" onkeyup="return searchResults.NavChild(event,1,0)" class="SRScope" href="../interface_o_c_annotation.html#a57678709759abcc7d87b12e77db94c8c" target="_parent">OCAnnotation::groupTag()</a>
+    <a id="Item1_c1" onkeydown="return searchResults.NavChild(event,1,1)" onkeypress="return searchResults.NavChild(event,1,1)" onkeyup="return searchResults.NavChild(event,1,1)" class="SRScope" href="../protocol_o_c_grouping-p.html#a57678709759abcc7d87b12e77db94c8c" target="_parent">OCGrouping-p::groupTag()</a>
+  </div>
+ </div>
+</div>
 <div class="SRResult" id="SR_">
  <div class="SREntry">
-  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../interface_o_c_algorithms.html#a63a7d02ad174df2e36e18eb99e878949" target="_parent"></a>
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../interface_o_c_algorithms.html#acefa480129ac2c544e2e20b300aee1e4" target="_parent"></a>
   <span class="SRScope">OCAlgorithms</span>
  </div>
 </div>
