--- a/Documentation/html/search/functions_69.html
+++ b/Documentation/html/search/functions_69.html
@@ -9,22 +9,28 @@
 <div class="SRStatus" id="Loading">Loading...</div>
 <div class="SRResult" id="SR_init">
  <div class="SREntry">
-  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../interface_o_c_annotation.html#a57ad2fd0acc7f81a31f4ddb709653418" target="_parent">init</a>
+  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../interface_o_c_annotation.html#a4213bb26f5207ee3f402fe463badc691" target="_parent">init</a>
   <span class="SRScope">OCAnnotation</span>
+ </div>
+</div>
+<div class="SRResult" id="SR_initsetup">
+ <div class="SREntry">
+  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="../interface_o_c_map_view.html#a08b14dc93787d96335f9be9146aa7752" target="_parent">initSetUp</a>
+  <span class="SRScope">OCMapView</span>
  </div>
 </div>
 <div class="SRResult" id="SR_islocationneartootherlocation">
  <div class="SREntry">
-  <a id="Item1" onkeydown="return searchResults.Nav(event,1)" onkeypress="return searchResults.Nav(event,1)" onkeyup="return searchResults.Nav(event,1)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_islocationneartootherlocation')">isLocationNearToOtherLocation</a>
+  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="javascript:searchResults.Toggle('SR_islocationneartootherlocation')">isLocationNearToOtherLocation</a>
   <div class="SRChildren">
-    <a id="Item1_c0" onkeydown="return searchResults.NavChild(event,1,0)" onkeypress="return searchResults.NavChild(event,1,0)" onkeyup="return searchResults.NavChild(event,1,0)" class="SRScope" href="../_o_c_distance_8h.html#a0074f5b53fa6506ab07fba907a5cdded" target="_parent">isLocationNearToOtherLocation(CLLocationCoordinate2D firstLocation, CLLocationCoordinate2D secondLocation, CLLocationDistance distanceInGeoCoordinates):&#160;OCDistance.m</a>
-    <a id="Item1_c1" onkeydown="return searchResults.NavChild(event,1,1)" onkeypress="return searchResults.NavChild(event,1,1)" onkeyup="return searchResults.NavChild(event,1,1)" class="SRScope" href="../_o_c_distance_8m.html#a0074f5b53fa6506ab07fba907a5cdded" target="_parent">isLocationNearToOtherLocation(CLLocationCoordinate2D firstLocation, CLLocationCoordinate2D secondLocation, CLLocationDistance distanceInGeoCoordinates):&#160;OCDistance.m</a>
+    <a id="Item2_c0" onkeydown="return searchResults.NavChild(event,2,0)" onkeypress="return searchResults.NavChild(event,2,0)" onkeyup="return searchResults.NavChild(event,2,0)" class="SRScope" href="../_o_c_distance_8h.html#a0074f5b53fa6506ab07fba907a5cdded" target="_parent">isLocationNearToOtherLocation(CLLocationCoordinate2D firstLocation, CLLocationCoordinate2D secondLocation, CLLocationDistance distanceInGeoCoordinates):&#160;OCDistance.m</a>
+    <a id="Item2_c1" onkeydown="return searchResults.NavChild(event,2,1)" onkeypress="return searchResults.NavChild(event,2,1)" onkeyup="return searchResults.NavChild(event,2,1)" class="SRScope" href="../_o_c_distance_8m.html#a0074f5b53fa6506ab07fba907a5cdded" target="_parent">isLocationNearToOtherLocation(CLLocationCoordinate2D firstLocation, CLLocationCoordinate2D secondLocation, CLLocationDistance distanceInGeoCoordinates):&#160;OCDistance.m</a>
   </div>
  </div>
 </div>
 <div class="SRResult" id="SR_">
  <div class="SREntry">
-  <a id="Item2" onkeydown="return searchResults.Nav(event,2)" onkeypress="return searchResults.Nav(event,2)" onkeyup="return searchResults.Nav(event,2)" class="SRSymbol" href="../interface_o_c_annotation.html#a3b2fcbe6872b025f27bbfc0703804fc4" target="_parent"></a>
+  <a id="Item3" onkeydown="return searchResults.Nav(event,3)" onkeypress="return searchResults.Nav(event,3)" onkeyup="return searchResults.Nav(event,3)" class="SRSymbol" href="../interface_o_c_annotation.html#ae512d98b7ecb301de4d73d9ca8c82e46" target="_parent"></a>
   <span class="SRScope">OCAnnotation</span>
  </div>
 </div>
