--- a/Documentation/html/search/variables_5f.html
+++ b/Documentation/html/search/variables_5f.html
@@ -7,9 +7,9 @@
 <body class="SRPage">
 <div id="SRIndex">
 <div class="SRStatus" id="Loading">Loading...</div>
-<div class="SRResult" id="SR_coordinate">
+<div class="SRResult" id="SR__5fgrouptag">
  <div class="SREntry">
-  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../interface_o_c_annotation.html#aa284dfc828e69ed8a933afa71bcd119d" target="_parent">coordinate</a>
+  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../interface_o_c_annotation.html#a5f95391c4e2ec90c4122a5fde9d29e85" target="_parent">_groupTag</a>
   <span class="SRScope">OCAnnotation</span>
  </div>
 </div>
