--- a/Documentation/html/search/variables_62.html
+++ b/Documentation/html/search/variables_62.html
@@ -7,10 +7,10 @@
 <body class="SRPage">
 <div id="SRIndex">
 <div class="SRStatus" id="Loading">Loading...</div>
-<div class="SRResult" id="SR_coordinate">
+<div class="SRResult" id="SR_backgroundclusterqueue">
  <div class="SREntry">
-  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../interface_o_c_annotation.html#aa284dfc828e69ed8a933afa71bcd119d" target="_parent">coordinate</a>
-  <span class="SRScope">OCAnnotation</span>
+  <a id="Item0" onkeydown="return searchResults.Nav(event,0)" onkeypress="return searchResults.Nav(event,0)" onkeyup="return searchResults.Nav(event,0)" class="SRSymbol" href="../interface_o_c_map_view.html#a3e785fc8662bb3814ecb3bcd58dc4ee5" target="_parent">backgroundClusterQueue</a>
+  <span class="SRScope">OCMapView</span>
  </div>
 </div>
 <div class="SRStatus" id="Searching">Searching...</div>
